// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValue encrypt value prop should render the actual value as it is if not set 1`] = `
<div class="field-item-value">
  Some Field Value
</div>
`;

exports[`FieldValue encrypt value prop when set as 'true' should render the encrypted value 1`] = `
<div class="field-item-value">
  Some Fie***************
</div>
`;

exports[`FieldValue encrypt value prop when set as 'true' with inspection prop should show the inspect button with the eye icon if set 1`] = `
<div class="field-item"><b class="field-item-title">
    Some Field Title:
  </b>
  <div class="field-item-value">
    Some Fie***************
  </div>
  <div class="field-item-inspect-btn icon-toggle"></div>
</div>
`;

exports[`FieldValue encrypt value prop when set as 'true' with inspection prop should toggle encrypted value when the inspect button is clicked 1`] = `
<div class="field-item-value">
  Some Field Value
</div>
`;

exports[`FieldValue encrypt value prop when set as 'true' with inspection prop should toggle encrypted value when the inspect button is clicked 2`] = `
<div class="field-item-value">
  Some Fie***************
</div>
`;

exports[`FieldValue encrypt value prop when set as 'true' with inspection prop should toggle the inspect button icon when the inspect button is clicked 1`] = `<div class="field-item-inspect-btn icon-toggle toggle-off"></div>`;

exports[`FieldValue encrypt value prop when set as 'true' with inspection prop should toggle the inspect button icon when the inspect button is clicked 2`] = `<div class="field-item-inspect-btn icon-toggle"></div>`;

exports[`FieldValue is required prop should append asterik with the title if set 1`] = `
<div class="field-item"><b class="field-item-title">
    Some Field Title*:
  </b>
  <div class="field-item-value">
    Some Field Value
  </div>
  <!---->
</div>
`;

exports[`FieldValue is required prop should not append asterik with the title if not set 1`] = `
<div class="field-item"><b class="field-item-title">
    Some Field Title:
  </b>
  <div class="field-item-value">
    Some Field Value
  </div>
  <!---->
</div>
`;
